--- a/FileNameModifier/FileNameModifier.csproj
+++ b/FileNameModifier/FileNameModifier.csproj
@@ -80,6 +80,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Logic\Converters\TextInputToVisibilityConverter.cs" />
+    <Compile Include="Logic\FileModification\FileNameCutter.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindowView.xaml.cs">
